Fix tiltingcontainers path

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <script src="script.js" defer></script>
     <script src="background.js" defer></script>
-    <script src="tiltingcontainers" defer></script>
+    <script src="tiltingcontainers.js" defer></script>
 </head>
 <body>
     <canvas id="backgroundCanvas"></canvas>
