Content update with QOL improvments

--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
             <img src="svgs/about.svg" alt="About" width="25" height="25">
         </div>
         <div class="nav-item" data-section="4">
+            <img src="svgs/experience.svg" alt="experience" width="25" height="25">
+        </div>
+        <div class="nav-item" data-section="5">
             <img src="svgs/contact.svg" alt="Contact" width="25" height="25">
         </div>
     </nav>
@@ -39,7 +42,7 @@
         <a href="https://github.com/Mikko-P"><img src="svgs/github-mark-white.svg"></img></a>
         <a href="projects.html">Katso niitä myös tältä sivulta</a>
     </div>
-    <div class="section" id="experience">
+    <div class="section" id="tools">
         <h2>Työkalut</h2>
         <div class="container">
             <ul>
@@ -63,6 +66,7 @@
                 <li>Git</li>
                 <li>MongoDB</li>
                 <li>SQL</li>
+                <li>Azure</li>
             </ul>
         </div>
     </div>
@@ -71,6 +75,19 @@
         <p>Olen ohjelmistokehittäjä Lahdesta, joka haluaa haastaa itseään erilaisilla pulmilla ja tehtävillä.</p>
         <p>Aloitin ohjelmoinnin ensimmäistä kertaa itsenäisesti ilmoittumalla koulun atk kursille. Tiesin, että homma ei olisi aina helppoa, mutta jokaisesta vastaan tulleesta ongelmasta on silti päästy yli.</p>
         <p>Opiskelen koulutuskeskus Salpauskessa ohjelmistokehittäjäksi. Olen oppinut Salpauksella paljon joukossa kehittämisestä ja millaista on työskennellä asiakkaiden kanssa.</p>
+    </div>
+    <div class="section" id="experience">
+        <h2>Kokemus</h2>
+        <span>Peikko Group</span>
+        <p>Olin noin 6 kuukauden harjoittelussa Peikko Group Oy nimisellä firmalla, jossa kehitin rakennusten visualisointi työkalua.</p>
+        <p>Peikolla käytetyt teknologiat: Javascript, Treejs, C# ja Blazor</p>
+
+        <span>Päijät-sote</span>
+        <p>Päijät-soteella oli noin 4 kuukauden urakka, jossa pääsin tekemään koulutusmateriaalia tuleville hoitajille. Kehitin Moodleen plugineja jotka lisäsivät Moodleen toimintoja</p>
+        <p>Päijät-sotella käytetyt teknologiat: Moodle, PHP, JavaScript</p>
+
+        <span>Azure</span>
+        <p>Olen ylläpitänyt omaa webappia ja nettisivuja Azurella.</p>
     </div>
     <div class="section" id="contact">
         <h2>Yhteydenotto</h2>
